--- a/src/main/resources/employee.yaml
+++ b/src/main/resources/employee.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: Employee API Specification
-  description: A simple Empolyee API
+  description: A simple Employee API
   version: 1.0-SNAPSHOT
 servers:
   - url: 'http://localhost:8080'
